--- a/.github/workflows/sync-fork.yaml
+++ b/.github/workflows/sync-fork.yaml
@@ -18,4 +18,4 @@ jobs:
           upstream_repo: https://github.com/XTLS/Xray-core.git
           upstream_branch: main
           downstream_branch: main
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.SYNC_PAT }}
